examples/invalid/semanticErr/declaration/undeclaredVar.wacc
# assignment to undeclared variable
# Output:
# #semantic error#

#Program:#

begin
  x = 10
end
